deploy/eks/argocd/base/infrastructure/ingress-kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-kong
  namespace: ingress-kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-kong
  template:
    metadata:
      labels:
        app: ingress-kong
    spec:
      serviceAccountName: kong-serviceaccount
      containers:
        - name: proxy
          image: kong:3.8
          ports:
            - name: proxy
              containerPort: 8000
            - name: proxy-ssl
              containerPort: 8443
            - name: admin
              containerPort: 8001
        - name: ingress-controller
          image: kong/kubernetes-ingress-controller:latest
          imagePullPolicy: IfNotPresent
          args:
              - "--ingress-class=kong"
