deploy/eks/argocd/base/infrastructure/ingress-kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: ingress-kong
spec:
  type: LoadBalancer
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
    - name: proxy-ssl
      port: 443
      targetPort: 8443
  selector:
    app: ingress-kong
